1_5_kuber-homeworks_networking_2/code/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: netology
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
